# PortfoTrack

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/portfotrack/cli/: errors.py  io.py  main.py  state.py  target.py
src/portfotrack/cli/target_cli/: __init__.py  error_codes.py  errors.py  target.py
src/portfotrack/common/: errors.py
src/portfotrack/domain/: asset.py  errors.py  target.py
src/portfotrack/domain/asset/: __init__.py  factory.py
src/portfotrack/domain/target_allocation/: __init__.py  error_codes.py  errors.py  target.py
src/portfotrack/services/: target_services.py
tests/common/: test_errors.py
tests/domain/: test_asset.py  test_target.py
