[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # import
  "UP",  # pyupgrade
  "B",   # bugbear
]

ignore = [
  "E501",  # line-length
]

fixable = ["ALL"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "portfotrack"
version = "0.1.0"
description = "Tracking Portforlio."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "commitizen>=4.11.6",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
]

[tool.setuptools.packages.find]
where = ["src"]
